# Common

./: .gitignore  README.md  main.py  untitled.py  untitled.ui
QtStudy/: CMakeLists.txt  db.db  main.cpp
QtStudy/headers/: main_window.h
QtStudy/lib/db_hander/: db_hander.cpp
QtStudy/lib/file_hander/: file_hander.cpp
QtStudy/lib/opencv_video/: opencv_function.cpp
QtStudy/lib/request_function/: get_post_request.cpp  pycallclass.py  request.cpp
QtStudy/lib/shell/: my_program.service
QtStudy/lib/time_function/: time_function.cpp
QtStudy/sources/: main_window.cpp
QtStudy/static/qss/: balck_qss.qss  main_qss.qss
QtStudy/ui/: ui_windowtest.h  windowtest.ui
main_control_project/: main.py
main_control_project/core/: main_head.py
main_control_project/gallery/: demo.py
main_control_project/ui/: init_untitled.py  init_untitled.ui  untitled.py  untitled.ui
my_interface_project/app/: start.py
my_interface_project/app/resource/: resource_rc.py
my_main_pythonProject/: main.py  new_main.py  test.py
my_main_pythonProject/AppData/db/: mydatabase.db
my_main_pythonProject/conf/: conf.ini  setting.py
my_main_pythonProject/conf/linphone/: ipv4linphonerc.ini  (+1 more)
my_main_pythonProject/lib/: blutooth_function.py  broadcast_function.py  city_locate_function.py  common_function.py  flushed_tips.py  load_balancing_function.py  motor_control.py  record_function.py  sipphone_function.py  timed_detection.py  video_recognition_function.py  weather_function.py  websocket_function.py  wifi_function.py
my_main_pythonProject/test/: test.py
test/: test.py
(+84 files in other folders)
